Added build-cards script Added some cards

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node readcards.js && vite",
     "build": "node readcards.js && vite build",
+    "build-cards": "cp -r cards dist/cards && node readcards.js",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "readcards": "node readcards.js"
